--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'book:home' %}">Home</a>
+              <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/admin/">Admin Panel</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'cart:cart' %}">Cart</a>
