--- a/templates/orders/create.html
+++ b/templates/orders/create.html
@@ -28,10 +28,10 @@
             <form method="post" class="mt-5">
                 {% csrf_token %}
                 {{form.as_p}}
-                <button type="submit" class="form-control btn btn-success mb-3">To'lov Qilish</button>
+                <button type="submit" class="form-control btn btn-success mb-3">Buyrutma Berish</button>
             </form>
             {% else %}
-            <h3 class="text-center mt-2">Savat Bo'sh</h3>
+            <h3 class="text-center mt-2">Savat Bo'sh {{order.id}}</h3>
             {% endif %}
         </div>
     </div>
