--- a/templates/orders/created.html
+++ b/templates/orders/created.html
@@ -6,6 +6,7 @@
 <div class="row">
     <div class="col-12">
         <h2>Buyrutmangiz qabul qilindi buyrutma raqami: {{order.id}}</h2>
+        <a href="{% url 'payments:process' order.id %}" class="btn btn-success form-control">To'lov qilish</a>
     </div>
 </div>
 
